--- a/docs/pages/components/tabs.mdx
+++ b/docs/pages/components/tabs.mdx
@@ -24,7 +24,7 @@ The content in tabs needs to be closely related. If tab content is too dissimila
 
 If the content makes sense on it's own without the content from the other tabs consider splitting it out to a separate page.
 
-## When not use
+## When not to use
 
 Tabs shouldn't be used as a way of navigating to different pages of content. Use other navigation methods such as the stacked nav or horizontal navigation instead.
 
