NDS-377 Move external link list into own component

--- a/docs/pages/components/pagination.mdx
+++ b/docs/pages/components/pagination.mdx
@@ -2,6 +2,7 @@ import { ComponentLayout } from "components/layouts/ComponentLayout";
 import { Example } from "components/examples/Example";
 import { DefaultPrevNext, DefaultSimple, DefaultEnhanced } from "components/examples/Pagination";
 import { Screenshot } from "components/core/Screenshot/Screenshot";
+import { ExternalLinkList } from "components/core/ExternalLinkList/ExternalLinkList";
 
 export const meta = {
 	title: "Pagination",
@@ -100,6 +101,8 @@ Pagination links are placed at the bottom of the page content, where users would
 
 ### Previous and next links
 
+<ExternalLinkList gitHubUrl="https://github.com/nice-digital/nice-design-system/blob/main/components/nds-prev-next" npmUrl="https://www.npmjs.com/package/@nice-digital/nds-prev-next" />
+
 <Example>
 <h4>Example: previous/next links</h4>
 <DefaultPrevNext />
@@ -140,6 +143,8 @@ Pagination links are placed at the bottom of the page content, where users would
 
 ### Simple pagination
 
+<ExternalLinkList gitHubUrl="https://github.com/nice-digital/nice-design-system/blob/main/components/nds-simple-pagination" npmUrl="https://www.npmjs.com/package/@nice-digital/nds-simple-pagination" />
+
 <Example>
 <h4>Example: simple pagination</h4>
 <DefaultSimple />
@@ -177,6 +182,8 @@ Pagination links are placed at the bottom of the page content, where users would
 -   Text and links are stacked vertically, aligned to the left hand side of the page. This helps users who are zoomed in to the page to see all the info. The source order also makes sense to screen readers.
 
 ### Enhanced pagination
+
+<ExternalLinkList gitHubUrl="https://github.com/nice-digital/nice-design-system/blob/main/components/nds-enhanced-pagination" npmUrl="https://www.npmjs.com/package/@nice-digital/nds-enhanced-pagination" />
 
 <Example>
 <h4>Example: enhanced pagination</h4>
