NDS-377 Add simple icon page

--- a/docs/pages/foundations/iconography.mdx
+++ b/docs/pages/foundations/iconography.mdx
@@ -4,8 +4,18 @@ export const meta = {
 	title: "Iconography"
 };
 
-# {meta.title}
+## Introduction
 
-*** Placeholder foundation page ***
+Avoid unnecessary decoration - only use icons if theres a real user need:
+
+-   if icons are needed ensure they are clear, simple and accompanied by relevant text
+-   dont hide functionality under icons
+-   icons should be easily recognizable
+-   keep icon designs simple and schematic.
+
+## How to use
+
+Instructions for using icons, including a table of existing icons, can be found on the
+[NDS icons page on GitHub](https://github.com/nice-digital/nice-design-system/tree/main/components/icons).
 
 export default ({ children }) => <ComponentLayout meta={meta} type="foundations">{children}</ComponentLayout>;
