NDS-377 Add links foundation; remove inconsistent apostrophes

--- a/docs/pages/components/a-z-list.mdx
+++ b/docs/pages/components/a-z-list.mdx
@@ -69,7 +69,7 @@ The panels should sit below the alphabet component.
 
 Links sit in alphabetical order across 3 columns starting with the top left column, Links flow down a column before moving to the next column.
 The panels stack down the page in alphabetical order.
-If there are no links associated with a letter then the panel isn’t created.
+If there are no links associated with a letter then the panel isn't created.
 
 <Screenshot image="az-2.png" alt="Screenshot of the A-Z List component" caption="No panels created for X and Y." />
 
