--- a/docs/pages/components/button.mdx
+++ b/docs/pages/components/button.mdx
@@ -94,8 +94,8 @@ For actions that need less prominence than a CTA button. Examples include:
 - A page with two actions of equal importance, where it would be inappropriate to give extra emphasis to one action with a CTA button.
 - Where a CTA button would distract from the main goal or content of the page.
 
-<Screenshot image="button-1.png" alt="Screenshot of the NICE guidance page" caption="Filtering results isn’t the main purpose of this page. A primary button could distract from the main content list and so wouldn’t be appropriate to use even though it’s main button on the page." />
-
+<Screenshot image="button-1.png" alt="Screenshot of the NICE guidance page" caption="Filtering results isn't the main purpose of this page. A primary button could distract from the main content list and so wouldn't be appropriate to use even though it's main button on the page." />
+1
 ### Secondary button
 
 <Example>
