--- a/docs/pages/components/card.mdx
+++ b/docs/pages/components/card.mdx
@@ -140,7 +140,7 @@ Callout cards will take the height of the tallest card in a row - this helps to 
 
 ### Clickable card
 
-The click area for card grids wraps the entire card. This creates a larger click area that’s easier for users to recognise and click.
+The click area for card grids wraps the entire card. This creates a larger click area that's easier for users to recognise and click.
 
 We avoid wrapping an entire card in an anchor tag as this can be a difficult experience for screen reader users.
 
