--- a/docs/pages/components/container.mdx
+++ b/docs/pages/components/container.mdx
@@ -21,11 +21,11 @@ Containers help to make the site work across different devices and screen sizes.
 
 ## When to use
 
-All pages should be inside some sort of container element, however some existing templates and site sections such as the Footer, header and global nav have margin and width settings already built in so the container isn’t needed.
+All pages should be inside some sort of container element, however some existing templates and site sections such as the Footer, header and global nav have margin and width settings already built in so the container isn't needed.
 
 Use if you need to make page content align with the fixed website elements such as the global nav and footer.
 
-You should use a container to wrap content inside the full bleed component [link]. Without a container content won’t align with surrounding content.
+You should use a container to wrap content inside the full bleed component [link]. Without a container content won't align with surrounding content.
 
 ### Full bleed without a container
 
