--- a/docs/pages/components/phase-banner.mdx
+++ b/docs/pages/components/phase-banner.mdx
@@ -17,7 +17,7 @@ Use an alpha banner when your service is in alpha and a beta banner if your serv
 
 ## How to use
 
-Your banner must sit below the NICE global navigation and above the page breadcrumb. You should use a ‘feedback’ link to collect feedback about your service. Ensure the user can return to their previous point on the page, having opened a dedicated page or form.
+Your banner must sit below the NICE global navigation and above the page breadcrumb. You should use a ‘feedback' link to collect feedback about your service. Ensure the user can return to their previous point on the page, having opened a dedicated page or form.
 
 ## Variants
 
