--- a/docs/pages/foundations/grid.mdx
+++ b/docs/pages/foundations/grid.mdx
@@ -21,7 +21,7 @@ Text has a maximum character limit of 66 characters to prevent long lines of tex
 
 Design for small screens first using a single column layout.
 
-Optimise for different screen sizes, but don’t make assumptions about specific devices.
+Optimise for different screen sizes, but don't make assumptions about specific devices.
 
 See our [responsive guidelines](https://nice-digital.github.io/nice-design-system/foundations/responsive/) for further content on building mobile first responsive layouts.
 
@@ -46,7 +46,7 @@ See our [responsive guidelines](https://nice-digital.github.io/nice-design-syste
 
 -   extend it in SASS via the `%container` placeholder for building custom components
 
--   don’t nest containers
+-   don't nest containers
 
 -   add vertical [spacing classes](https://nice-digital.github.io/nice-design-system/foundations/spacing/#css-classes) to containers to add margins and padding.
 
